# clauveo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  create-icon.md  dev.sh  docker-compose.yml  index.html  openai-config.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index-simple.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  recording.rs  types.rs
src/components/: AboutView.tsx  ClauveoInterface.tsx  ProcessingView.tsx  RecordingView.tsx  ResultsView.tsx  SettingsView.tsx  VideoRecorder.tsx
src/hooks/: useClaudeCLI.ts  useRecording-simple.ts  useRecording.ts
src/lib/: aiClient.ts  videoProcessor.ts
src/types/: index.ts
